--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="right_content">
         <h2>Consultorio Jurídico</h2>
         <p>El Consultorio Jurídico de la Universidad El Bosque, es el espacio dentro del cual los estudiantes de los últimos semestres de la facultad de Derecho realizan su práctica jurídica, brindando asesoría y representación legal gratuita y de calidad, a personas que se encuentran en estado de vulnerabilidad económica y social, esto dentro de las competencias asignadas por la ley y en cumplimiento del perfil biopsicosocial y cultural que identifica a nuestra comunidad universitaria.</p>
-        <h4>¿Cuál es nuestra Misión?</h4>
+        <h4 style="color:#0077C8">¿Cuál es nuestra Misión?</h4>
         <p>El Consultorio Jurídico de la Universidad El Bosque, cumple una doble misión; de una parte, brindar un espacio académico en el cual los alumnos de los últimos años de la Facultad de Derecho ponen en práctica los conocimientos adquiridos durante su carrera; y de la otra, cumplir con una función social, prestando atención jurídica gratuita y de calidad a la comunidad, siempre inculcando el respeto a la dignidad humana, a los principios y a los valores éticos que rigen su profesión, bajo la constante supervisión de abogados expertos en cada una de las áreas del Derecho.</p>
       </div>
     </section>
@@ -306,7 +306,7 @@
     <header style="background-color:#EC2462"><br><br>
       <div class="second_fold">
         <div>
-          <h1 style="font-size: 64px;line-height: 74px;">Centro de Conciliación</h1>
+          <h1 style="font-size: 45px;line-height: 53px;">Centro de Conciliación</h1>
           <p style="color:white;font-size: 24px;">con la confianza que estos serán atendidos y resueltos con prontitud y calidad, por un equipo altamente capacitado y con calidad humana. </p>
         </div>
         <div><img src="../../images/photos/header-banner_centro.png" alt="header-banner"></div>
@@ -323,32 +323,32 @@
         <p>El CCCJ busca ser un Centro líder en el país en la prestación del servicio de la conciliación, e innovador en la pedagogía, promoción, divulgación y recta aplicación de los MASC, teniendo como fundamento el servicio social, la igualdad y el respeto por el otro y contribuyendo a la formación de profesionales idóneos y comprometidos con la justicia.</p>
       </div>
     </section>
-    <section style="text-align:center;margin-bottom:4rem;background: #FBEBEF;padding: 70px 70px 0px 70px;max-width: 1200px;">
+    <section style="text-align:center;margin-bottom:4rem;background: #FBEBEF;padding: 70px 70px 30px 70px;max-width: 1200px;">
       <h1 style="color:#EC2462;">Preguntas Frecuentes</h1>
     </section>
     <section class="consultorio" id="preguntascentroconciliacion" style="margin-top:-4em;background: #FBEBEF; padding: 0px 70px 70px 70px;">
-      <div class="left_content" style="padding-right:40px;">
-        <h4 style="color:#EC2462;font-weight: bold;">¿Qué es el Centro de Conciliación?</h4>
+      <div class="left_content">
+        <h4>¿Qué es el Centro de Conciliación?</h4>
         <p>Dependencia autónoma del Consultorio Jurídico de la Universidad El Bosque cuya autorización se encuentra en trámite ante el Ministerio de Justicia y del Derecho.</p>
-        <h4 style="color:#EC2462;font-weight: bold;">¿Qué hace el Centro de Conciliación?</h4>
+        <h4>¿Qué hace el Centro de Conciliación?</h4>
         <p>Administra justicia.</p>
-        <h4 style="color:#EC2462;font-weight: bold;">¿Cómo lo hace?</h4>
+        <h4>¿Cómo lo hace?</h4>
         <p>Realizando Audiencias de Conciliación Extrajudiciales en Derecho.</p>
-        <h4 style="color:#EC2462;font-weight: bold;">¿Quiénes lo hacen?</h4>
+        <h4>¿Quiénes lo hacen?</h4>
         <p>Nuestros Estudiantes Conciliadores y Docentes Asesores Conciliadores</p>
       </div>
-      <div class="right_content" style="padding-left:40px;">
-        <h4 style="color:#EC2462;font-weight: bold;">ESTRUCTURA DEL CCCJ </h4>
+      <div class="right_content">
+        <h4>ESTRUCTURA DEL CCCJ </h4>
         <p> Director del Centro de Conciliación - Docentes Asesores Conciliadores - Practicante de Psicología - Secretaria - Estudiantes Conciliadores</p>
-        <h4 style="color:#EC2462;font-weight: bold;">¿Dónde se hace?</h4>
+        <h4>¿Dónde se hace?</h4>
         <p>En la Sede del CCCJ La conciliación es  un mecanismo de resolución de conflictos a través del cual dos o más personas gestionan por sí mismas la solución de sus diferencias con la ayuda de un tercero neutral y calificado denominado conciliador. (Art. 64 ley 446 de 1998) El efecto del acuerdo conciliatorio es el TRÁNSITO A COSA JUZGADA y el del Acta de Conciliación es que presta MÉRITO EJECUTIVO.</p>
-        <h4 style="color:#EC2462;font-weight: bold;">¿Qué es la conciliación?</h4>
+        <h4>¿Qué es la conciliación?</h4>
         <p>Es un mecanismo de resolución de conflictos a través del cual dos o mas personas gestionan por sí mismas la solución de sus diferencias con la ayuda de un tercero neutral y calificado denominado conciliador.</p>
       </div>
     </section>
     <section class="tabs_container_centro" id="centro">
       <div class="tabs" id="tabs_2">
-        <ul style="grid-template-columns: 1fr 1fr;color:#EC2462;">
+        <ul>
           <li><a href="#tabs-6">Asuntos conciliables</a></li>
           <li><a href="#tabs-7">Etapas del procedimiento conciliatorio</a></li>
         </ul>
@@ -399,12 +399,12 @@
     </section>
     <section class="formulario" style="background: transparent;"><img src="../../images/photos/infografia_tramite.png" alt="legal icon" style="width:60%; margin-left:auto;margin-right:auto;"></section>
     <section class="formulario" style="background: #FBEBEF;">
-      <h1 style="color:#EC2462">Formulario Inscripción Centro de Conciliación </h1>
+      <h1>Formulario Inscripción Centro de Conciliación </h1>
       <p>Una vez se reciba la información, el Centro de Conciliación de la Universidad El Bosque se comunicará con Usted para acordar el día y hora que se hará la entrevista y la forma en que se realizará, ya sea vía telefónica o por medios virtuales.</p><a href="#" style="border:solid;color:#EC2462">Registrarme Ahora</a>
     </section>
-    <section style="text-align:center;margin-bottom:4rem;">
-      <h1 style="color:#EC2462;">Nuestro Centro de Conciliación</h1>
-      <p style="margin-left: auto;margin-right: auto;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <section class="fotos">
+      <h1>Nuestro Centro de Conciliación</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </section>
     <section>
       <div class="carousel carousel-main" data-flickity="{ &quot;imagesLoaded&quot;: true, &quot;percentPosition&quot;: false }"><img src="../../images/photos/instalaciones/1.png" alt="legal icon" style="margin-left:30px;margin-right:30px;"><img src="../../images/photos/instalaciones/2.png" alt="legal icon" style="margin-left:30px;margin-right:30px;"><img src="../../images/photos/instalaciones/3.png" alt="legal icon" style="margin-left:30px;margin-right:30px;"><img src="../../images/photos/instalaciones/4.png" alt="legal icon" style="margin-left:30px;margin-right:30px;"><img src="../../images/photos/instalaciones/5.png" alt="legal icon" style="margin-left:30px;margin-right:30px;"><img src="../../images/photos/instalaciones/6.png" alt="legal icon" style="margin-left:30px;margin-right:30px;"><img src="../../images/photos/instalaciones/7.png" alt="legal icon" style="margin-left:30px;margin-right:30px;"></div>
